Fix #345: On the public organisation's DDA listing page, in mobile mode the card buttons are not responsive (#346)

--- a/v2/src/components/DataSources/style.scss
+++ b/v2/src/components/DataSources/style.scss
@@ -255,6 +255,21 @@
         .actionListingBtn {
             @include breakpoints.mobileOnly {
                 flex-direction: column;
+                align-items: stretch;
+
+                > .MuiBox-root:first-child {
+                    flex-direction: column;
+                    align-items: flex-start;
+                    justify-content: flex-start;
+                    row-gap: 8px;
+
+                    > .MuiBox-root {
+                        width: 100%;
+                        flex-direction: column;
+                        align-items: stretch;
+                        row-gap: 8px;
+                    }
+                }
             }
 
             .MuiButtonBase-root {
@@ -265,6 +280,10 @@
                 color: #000;
                 margin-top: 8px;
                 padding: 5px 30px;
+
+                @include breakpoints.mobileOnly {
+                    width: 100%;
+                }
             }
 
             .MuiButtonBase-root:hover {
